[package]
name = "echotune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = {version = "*", features = ["full", "io-util", "io-std"]}
tokio-util = {version = "*", features = ["io", "codec"]}
reqwest = {version = "*", features = ["json", "stream"]}
serde = {version = "*", features = ["derive"]}
serde_json = {version = "*", features = ["raw_value"]}
dialoguer = {version = "*", features = ["fuzzy-select"]}
colored = {version = "*"}
directories = {version = "*"}
indicatif = {version = "*"}
clap = {version = "*", features = ["cargo", "derive"]}
# from git url
#vlc-rs = { git = "https://code.videolan.org/videolan/vlc-rs.git", branch = "master" }
rodio = {version = "*"}
bytes = {version = "*", features = ["serde"]}
futures-util = {version = "*"}
futures = {version = "*"}
futures-core = {version = "*"}
ctrlc = {version = "*"}
winapi = {version = "*"}
signal-hook = {version = "*", features = ["iterator", "channel"]}




